--- a/index.html
+++ b/index.html
@@ -27,44 +27,55 @@
 
 			// end config
 
-			async function fetch_players() {
-				let request_url = "https://api.altv.mp/server/" + "" + server_id;
+            let fetch_interval = undefined;
+
+            async function fetch_players() {
+				let request_url = `https://api.altv.mp/server/${server_id}`;
 				console.info("Requesting server data.");
 				let response = await fetch(request_url);
-				if (response.status !=200) {
+				if (!response.ok) {
 					console.error("Couln`t fetch api data!");
-					return 0, 0
+					return [0, 0]
 				} else {
 					let json = await response.json();
 					if (!json.active) {
 						console.error("The server is offline!");
-						return 0, 0
+						return [0, 0]
 					} else {
 						let players = json.info.players;
 						let max_players = json.info.maxPlayers;
-						set_new_stats(players, max_players);
+                        return [players, max_players]
 					}
 					
 				}
 			}
-			
-			function set_new_stats(players, maxPlayers) {
+
+            function set_new_stats(players, maxPlayers) {
 				console.info("settings new stats");
-				let player_counter = document.getElementById("p_count");
-				let max_player_counter = document.getElementById("max_pcount");
+				const player_counter = document.getElementById("p_count");
+				const max_player_counter = document.getElementById("max_pcount");
 				
 				player_counter.innerHTML = players;
 				max_player_counter.innerHTML = maxPlayers;
 			}
 
+            async function update_stats() {
+                const current_data = await fetch_players();
+                set_new_stats(current_data[0], current_data[1]);
+            }
+
 			// initial fetch
-			fetch_players();
+			update_stats();
 			// we don`t go below one
-			if (refresh_time < 1) {
-				window.setInterval(fetch_players, (1 * 60 * 1000));  
+			if (typeof(refresh_time) != "number" || refresh_time < 1) {
+				fetch_interval = window.setInterval(update_stats, (1 * 60 * 1000));  
 			} else {
-				window.setInterval(fetch_players, (refresh_time * 60 * 1000));  
+				fetch_interval = window.setInterval(update_stats, (refresh_time * 60 * 1000));  
 			}
+
+            window.onbeforeunload = function() {
+                window.clearInterval(fetch_interval);
+            }
 		</script>
 	</footer>
 </html>
