--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			}
 		</style>
-	<head>
+	</html>
 	<body>
 		<span id="p_count">0</span> / <span id="max_pcount">0</span>
 	</body>
@@ -48,13 +48,13 @@
                             let max_players = json.info.maxPlayers;
                             return [players, max_players]
                         }
-                        
                     }
                 } catch (error) {
                     console.error(error);
                     return [0, 0]
                 }
 				
+                return [0, 0]
 			}
 
             function set_new_stats(players, maxPlayers) {
