change to new api url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://api.altv.mp">
+		<link rel="preconnect" href="https://api.alt-mp.com">
 		<title>alt:V</title>
 		<style>
 			body {
@@ -30,7 +30,7 @@
             let fetch_interval = undefined;
 
             async function fetch_players() {
-				const request_url = `https://api.altv.mp/server/${server_id}`;
+				const request_url = `https://api.alt-mp.com/server/${server_id}`;
 				console.info("Requesting server data.");
 				
                 try {
